--- a/REACT/Clase 10/index.html
+++ b/REACT/Clase 10/index.html
@@ -8,6 +8,9 @@
     <title>Pelis</title>
 </head>
 <body>
+    <div class="controlPagina">
+        
+    </div>
     <div class="contenedor">
 
     </div>
